force-app/main/default/objects/LLC_BI__Team_Member__c/fields/LLC_BI__Role__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is required. It is manually populated. It identifies the role that has been assigned to a user when adding them to the loan team.</description>
    <label>Role</label>
    <referenceTo>LLC_BI__Role__c</referenceTo>
    <relationshipLabel>Team Members</relationshipLabel>
    <relationshipName>Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>