force-app/main/default/objects/LLC_BI__Team_Member__c/fields/LLC_BI__Team__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional. It is manually populated. It identifies the team to which a team member can be linked.</description>
    <label>Team</label>
    <referenceTo>LLC_BI__Team__c</referenceTo>
    <relationshipLabel>Team Members</relationshipLabel>
    <relationshipName>Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>