force-app/main/default/objects/LLC_BI__Team_Member__c/fields/LLC_BI__Team_Role__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Team_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field is deprecated.  Team_Role has been replaced with Role.</inlineHelpText>
    <label>-D Role</label>
    <referenceTo>LLC_BI__Team_Role__c</referenceTo>
    <relationshipLabel>Team Members</relationshipLabel>
    <relationshipName>Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>