force-app/main/default/objects/LLC_BI__Team_Member__c/fields/LLC_BI__User__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is required. It is manually populated. It identifies the user being associated with a loan team.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>